images updates and other content update

--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -1,17 +1,16 @@
-<div
-  style="background:linear-gradient(116.74deg, #323A45 -40.07%, #046B99 66.75%);">
+<div class="bg-primary-gradient p-b-md">
   <div class="partner-with-us container">
     <div class="row">
-      <div class="half">
-        <div class="pb-3" style="max-width: 675px;">
-          <h2 class="mt-4 mb-2 text-white">Partner with us</h2>
+      <div class="col-sm-6">
+        <div class="pb-3">
+          <h2 class="mt-5 mb-2 text-white">Partner with us</h2>
           <p class="text-white pb-3">
             Improvements to the State Web Template and the Design System are
             largely driven by your feedback.  We’d love to hear from you!
           </p>
         </div>
       </div>
-      <div class="half" style="padding-left: 200px">
+      <div class="col-sm-6 p-l-lg">
         <svg
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
