--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="p-t-1 p-b-3">Who's using the new design system</h2>
+  <h2 class="p-t-1 p-b-3">Who's using V6</h2>
   <div class="row">
     <div class="col-md-6 m-b-md p-r-lg-desktop">
       <div
@@ -7,22 +7,19 @@
         <picture>
           <source
             media="(max-width: 575px)"
-            srcset="/images/homepage-sample-climate-low.jpg" />
+            srcset="/images/homepage-sample-cdt-low.jpg" />
           <img
             class="img-fluid w-100"
-            src="/images/homepage-sample-climate.jpg"
+            src="/images/homepage-sample-cdt.jpg"
             style="aspect-ratio: 450 / 310"
-            alt="Homepage screenshot of Climate Action website." />
+            alt="Homepage screenshot of California Department of Technology website." />
         </picture>
       </div>
 
-      <div class="pt-3" style="min-height: 236px;">
-        <h3 class="h4 m-t-0 m-b-sm">Climate Action</h3>
+      <div class="pt-3 m-b-lg" style="min-height: 236px;">
+        <h3 class="h4 m-t-0 m-b-sm">California Department of Technology website redesign</h3>
         <p>
-          The Design System components and structure made it easier to develop
-          and design. With less time focused on engineering, the team could
-          focus their time on content, UX design, and branding. This site shares
-          important climate-saving programs to Californians.
+          The template components, patterns, and structure made it easier to develop and design. With more free time, the team could focus on content, UX design, and branding. They help departments deliver public services through strategy, innovation, and delivery
         </p>
 
         <span class="d-flex flex-center lh-1">
@@ -35,9 +32,7 @@
               d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z"
               fill="#046B99" />
           </svg>
-          <a class="font-weight-bold" href="https://climateaction.ca.gov/">
-            climateaction.ca.gov
-          </a>
+          <a class="font-weight-bold" href="https://www.cdt.ca.gov/">cdt.ca.gov</a>
         </span>
       </div>
     </div>
@@ -48,22 +43,19 @@
         <picture>
           <source
             media="(max-width: 575px)"
-            srcset="/images/homepage-sample-abortion-low.jpg" />
+            srcset="/images/homepage-sample-build-low.jpg" />
           <img
             class="img-fluid w-100"
-            src="/images/homepage-sample-abortion.jpg"
+            src="/images/homepage-sample-build.jpg"
             style="aspect-ratio: 450 / 310"
-            alt="Homepage screenshot of California's Abortion Access Portal website." />
+            alt="Homepage screenshot of build.ca.gov website." />
         </picture>
       </div>
 
-      <div class="pt-3" style="min-height: 236px;">
-        <h3 class="h4 m-t-0 m-b-sm">California abortion access</h3>
+      <div class="pt-3 m-b-lg" style="min-height: 236px;">
+        <h3 class="h4 m-t-0 m-b-sm">Build.ca.gov</h3>
         <p>
-          This site launched in three weeks! The new template gave the design
-          team an ability to fast track the design and information architecture.
-          The template proved critical in sharing official information on
-          women’s health.
+          The template and UI kit helped the design team fast track designs and prototypes . The template provided a good foundation to share updates on infrastructure projects in California. 
         </p>
         <span class="d-flex flex-center lh-1">
           <svg
@@ -75,8 +67,8 @@
               d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z"
               fill="#046B99" />
           </svg>
-          <a class="font-weight-bold" href="https://abortion.ca.gov/">
-            abortion.ca.gov
+          <a class="font-weight-bold" href="https://www.build.ca.gov/">
+            build.ca.gov
           </a>
         </span>
       </div>
