--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -23,9 +23,7 @@
             </a>
           </h3>
           <p>
-            Content patterns are now available! This design solution will
-            enhance your visitors' experience and help them complete their
-            tasks.
+            Content patterns are now available! This design solution will help your visitors complete their tasks.
           </p>
         </div>
       </div>
@@ -53,8 +51,7 @@
             </a>
           </h3>
           <p>
-            Better wayfinding and new side navigation makes developing
-            user-friendly websites easier than ever.
+            Better wayfinding and new side navigation makes developing user-friendly websites easier than ever.
           </p>
         </div>
       </div>
@@ -81,10 +78,9 @@
             </a>
           </h3>
           <p>
-            We’ve enhanced our typography with the Public Sans font family.
-            Strengthen your department’s brand and content with this strong,
-            neutral typeface.
+            We’ve enhanced our typography with the Public Sans font family. Strengthen your department’s brand and content with this strong, neutral typeface.
           </p>
+          <p>Visit <a href="/whats-new.html">What’s new</a> for more detail on V6 template and website updates.</p>
         </div>
       </div>
     </div>
