updated to v6.3.1-beta3

--- a/src/_includes/utility-header.njk
+++ b/src/_includes/utility-header.njk
@@ -13,7 +13,10 @@
           State of California
         </p>
       </div>
-      <div class="settings-links"></div>
+      <div class="settings-links">
+        <a href="/about.html">About us</a>
+        <a href="/contact-us.html">Contacts</a>
+      </div>
     </div>
   </div>
 </div>
