adding separate load for public-sans

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -1,3 +1,8 @@
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=block"
+  rel="stylesheet" />
 <link rel="stylesheet" href="/state-template/css/cagov.core.min.css" />
 <link
   rel="stylesheet"
