--- a/src/_includes/utility-header.njk
+++ b/src/_includes/utility-header.njk
@@ -14,8 +14,7 @@
         </p>
       </div>
       <div class="settings-links">
-        <a href="/about.html">About us</a>
-        <a href="/contact-us.html">Contacts</a>
+        <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML/releases">Web template v6.3.1</a>
       </div>
     </div>
   </div>
