Code for putting the design system sample in

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -13,6 +13,7 @@
 <script
   type="text/javascript"
   src="/state-template/js/cagov.core.min.js"></script>
+<script type="module" src="/cal-ds-nav/index.js"></script>
 {% for link in customjs %}
 <script src="{{ link }}"></script>
 {%- endfor -%}
