--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,71 +1,10 @@
-<nav
-  id="navigation"
-  class="main-navigation dropdown"
-  aria-label="Main navigation">
-  <ul id="nav_list" class="top-level-nav">
-    <li class="nav-item">
-      <a
-        class="first-level-link {{- ' active' if landing === 'Template updates' }}"
-        href="/template-updates.html">
-        Template updates
-      </a>
-    </li>
-    <li class="nav-item">
-      <a
-        class="first-level-link {{- ' active' if landing === 'Get started' }}"
-        href="/get-started.html">
-        Get started
-      </a>
-    </li>
-    <li class="nav-item">
-      <a
-        class="first-level-link {{- ' active' if landing === 'Structure' }}"
-        href="/structure.html"
-        >Structure</a
-      >
-    </li>
-    <li class="nav-item {{- ' active' if landing === 'Visual design' }}">
-      <a class="first-level-link active" href="/visual-design.html">
-        Visual design
-      </a>
-      <div class="sub-nav">
-        <ul class="second-level-nav">
-          <li class="unit1">
-            <a href="/visual-design/color.html" class="second-level-link">
-              Color
-            </a>
-          </li>
-          <li class="unit1">
-            <a href="/visual-design/icons.html" class="second-level-link">
-              Icons
-            </a>
-          </li>
-          <li class="unit1">
-            <a href="/visual-design/typography.html" class="second-level-link">
-              Typography
-            </a>
-          </li>
-          <li class="unit1">
-            <a href="/visual-design/ui-kit.html" class="second-level-link">
-              UI kit
-            </a>
-          </li>
-        </ul>
-      </div>
-    </li>
-    <li class="nav-item">
-      <a
-        class="first-level-link {{- ' active' if landing === 'Components' }}"
-        href="/components.html"
-        >Components</a
-      >
-    </li>
-    <li class="nav-item">
-      <a
-        class="first-level-link {{- ' active' if landing === 'Patterns' }}"
-        href="/patterns.html"
-        >Patterns</a
-      >
-    </li>
-  </ul>
-</nav>
+<cal-ds-nav>
+  <template>
+    <a href="/template-updates.html"> Template updates </a>
+    <a href="/get-started.html"> Get started </a>
+    <a href="/structure.html">Structure</a>
+    <a href="/visual-design.html"> Visual design </a>
+    <a href="/components.html">Components</a>
+    <a href="/patterns.html">Patterns</a>
+  </template>
+</cal-ds-nav>
