--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -39,7 +39,7 @@
   <!-- Copyright Statement -->
   <div class="copyright">
     <div class="container text-right">
-      Copyright &copy;
+      Copyright
       <span id="thisyear">
         <script>
           document.getElementById('thisyear').appendChild(document.createTextNode(new Date().getFullYear()))
