adding utm tags to header/footer

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -2,7 +2,9 @@
 <footer id="footer" class="global-footer">
   <div class="container">
     <div class="d-flex">
-      <a href="https://ca.gov" class="cagov-logo">
+      <a
+        href="https://www.ca.gov?utm_campaign=state_template_link&utm_medium=footer&utm_source=external"
+        class="cagov-logo">
         <span class="sr-only">CA.gov</span>
         <span class="ca-gov-logo-svg"></span>
       </a>
