--- a/src/_includes/utility-header.njk
+++ b/src/_includes/utility-header.njk
@@ -15,10 +15,7 @@
         </p>
       </div>
       <div class="settings-links">
-        <a
-          href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML/releases"
-          >Web template v6.3.1</a
-        >
+        <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML/releases">Web template v6.3.1</a>
       </div>
     </div>
   </div>
