--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row my-4">
       <div class="col my-auto">
-        <h1 class="color-white font-weight-600">State Template V6</h1>
+        <h1 class="color-white font-weight-600">State Web Template V6</h1>
         <div
           class="color-white lead m-b-lg line-height-1-6em"
           style="max-width:22em;">
