using real prod

--- a/pages/webconfig/web.config.njk
+++ b/pages/webconfig/web.config.njk
@@ -43,7 +43,7 @@ duplicate "original_url" in data' | error }} {% endif -%}
           <conditions>
             <add
               input="{HTTP_HOST}"
-              pattern="^as-cdt-pub-migr-templatews-ww-p-001-dev\.azurewebsites\.net$" />
+              pattern="^template\.webstandards\.ca\.gov$" />
           </conditions>
           <action type="Rewrite" url="robots-prod.txt" />
         </rule>
