--- a/src/_includes/utility-header.njk
+++ b/src/_includes/utility-header.njk
@@ -15,7 +15,10 @@
         </p>
       </div>
       <div class="settings-links">
-        <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML/releases">Web template v6.3.2</a>
+        <a
+          href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML/releases"
+          >Web template v6.3.4</a
+        >
       </div>
     </div>
   </div>
