--- a/src/_includes/site-header.njk
+++ b/src/_includes/site-header.njk
@@ -5,10 +5,10 @@
       <a href="/">
         <div class="logo-assets">
           <img
-            src="/images/template-logo.png"
+            src="/images/state-template-logo.svg"
             class="logo-img"
             alt="State Template Logo"
-            style="aspect-ratio: 80 / 48.17" />
+            style="aspect-ratio: 1 / 1" />
           <div class="logo-text">
             <span class="logo-state">State of California</span>
             <span class="logo-dept">Web Template</span>
