replaced build thumb and blurb  with ca.gov

--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -17,9 +17,14 @@
       </div>
 
       <div class="pt-3 m-b-lg" style="min-height: 236px;">
-        <h3 class="h4 m-t-0 m-b-sm">California Department of Technology website redesign</h3>
+        <h3 class="h4 m-t-0 m-b-sm">
+          California Department of Technology website redesign
+        </h3>
         <p>
-          The template components, patterns, and structure made it easier to develop and design. With more free time, the team could focus on content, UX design, and branding. They help departments deliver public services through strategy, innovation, and delivery
+          The template components, patterns, and structure made it easier to
+          develop and design. With more free time, the team could focus on
+          content, UX design, and branding. They help departments deliver public
+          services through strategy, innovation, and delivery
         </p>
 
         <span class="d-flex flex-center lh-1">
@@ -32,7 +37,9 @@
               d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z"
               fill="#046B99" />
           </svg>
-          <a class="font-weight-bold" href="https://www.cdt.ca.gov/">cdt.ca.gov</a>
+          <a class="font-weight-bold" href="https://www.cdt.ca.gov/"
+            >cdt.ca.gov</a
+          >
         </span>
       </div>
     </div>
@@ -46,16 +53,22 @@
             srcset="/images/homepage-sample-build-low.jpg" />
           <img
             class="img-fluid w-100"
-            src="/images/homepage-sample-build.jpg"
+            src="/images/homepage-sample-cagov.jpg"
             style="aspect-ratio: 450 / 310"
-            alt="Homepage screenshot of build.ca.gov website." />
+            alt="Homepage screenshot of ca.gov portal website." />
         </picture>
       </div>
 
       <div class="pt-3 m-b-lg" style="min-height: 236px;">
-        <h3 class="h4 m-t-0 m-b-sm">Build.ca.gov</h3>
+        <h3 class="h4 m-t-0 m-b-sm">
+          CA.gov - State of California's flagship website
+        </h3>
         <p>
-          The template and UI kit helped the design team fast track designs and prototypes . The template provided a good foundation to share updates on infrastructure projects in California. 
+          The website uses the template's core framework and components, which
+          streamlined development. Using the UI kit and page patterns lay a good
+          foundation for the design team. Having foundational items from the
+          template allowed the team to focus on more complex and creative
+          aspects of the product.
         </p>
         <span class="d-flex flex-center lh-1">
           <svg
@@ -67,9 +80,7 @@
               d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z"
               fill="#046B99" />
           </svg>
-          <a class="font-weight-bold" href="https://www.build.ca.gov/">
-            build.ca.gov
-          </a>
+          <a class="font-weight-bold" href="https://www.ca.gov/">ca.gov</a>
         </span>
       </div>
     </div>
