removed hardcoded width

--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -16,7 +16,7 @@
         </picture>
       </div>
 
-      <div class="pt-3 m-b-lg" style="min-height: 236px;">
+      <div class="pt-3 m-b-lg">
         <h3 class="h4 m-t-0 m-b-sm">
           California Department of Technology website redesign
         </h3>
@@ -59,7 +59,7 @@
         </picture>
       </div>
 
-      <div class="pt-3 m-b-lg" style="min-height: 236px;">
+      <div class="pt-3 m-b-lg">
         <h3 class="h4 m-t-0 m-b-sm">
           CA.gov - State of California's flagship website
         </h3>
