--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,7 @@
 .branding .header-organization-banner a .logo-assets .logo-text .logo-dept {
   color: var(--color-p2);
 }
+
+.header-primary-banner img {
+  transform: scaleX(-1);
+}
