optimized logo svg

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,6 +2,20 @@
   color: var(--color-p2);
 }
 
+.branding .header-organization-banner a .logo-assets .logo-img {
+  height: 2.5rem;
+}
+
+.branding .header-organization-banner a .logo-assets .logo-img path {
+  fill: var(--color-p2);
+}
+
+@media (min-width: 992px) {
+  .branding .header-organization-banner a .logo-assets .logo-img {
+    height: 3.5rem;
+  }
+}
+
 .header-primary-banner img {
   transform: scaleX(-1);
 }
