adding js defer to reference

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -10,7 +10,7 @@
 {%- endif -%}
 <script
   type="text/javascript"
-  src="/state-template/js/cagov.core.min.js"></script>
+  src="/state-template/js/cagov.core.min.js" defer></script>
 {% for link in customjs %}
 <script src="{{ link }}"></script>
 {%- endfor -%}
