--- a/src/_includes/modules/executive-profile-dark.html
+++ b/src/_includes/modules/executive-profile-dark.html
@@ -1,4 +1,4 @@
-<!--Executive profile figure-->
+<!--Executive profile dark-->
 <figure class="executive-profile bg-transparent dark">
   <img src="/images/blockquote-with-image.jpg" alt="Image Description" />
   <div class="executive-profile-body">
@@ -6,7 +6,7 @@
     <h3 class="executive-name">Name</h3>
     <p>Government agency</p>
     <p>
-      <a href="javascript:;" aria-label="Link to Official's Website">
+      <a href="javascript:;" aria-label="Link to Official's Website 1">
         Bio or contact info
       </a>
     </p>
