--- a/src/_includes/modules/executive-profile.html
+++ b/src/_includes/modules/executive-profile.html
@@ -6,7 +6,7 @@
     <h3 class="executive-name">Name</h3>
     <p>Government agency</p>
     <p>
-      <a href="javascript:;" aria-label="Link to Official's Website">
+      <a href="javascript:;" aria-label="Link to Official's Website 3">
         Bio or contact info
       </a>
     </p>
