Siteimprove error fixes

--- a/src/_includes/modules/navigation-sample-news.njk
+++ b/src/_includes/modules/navigation-sample-news.njk
@@ -1,6 +1,6 @@
 <!-- Top Level Navigation Only -->
 <nav id="navigation" class="main-navigation dropdown">
-  <ul id="nav_list" class="top-level-nav">
+  <ul id="nav_list" class="top-level-nav" role="list">
     <li class="nav-item" role="presentation">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Link 1
