--- a/src/_includes/modules/nav-icons-no-search.html
+++ b/src/_includes/modules/nav-icons-no-search.html
@@ -6,7 +6,7 @@ Options are: megadropdown dropdown singlelevel
 -->
 
 <nav id="navigation" class="main-navigation singlelevel justify-content-end">
-  <ul id="nav_list" class="top-level-nav">
+  <ul id="nav_list" class="top-level-nav" role="list">
     <li class="nav-item" role="presentation">
       <a href="javascript:;" target="_blank" class="first-level-link">
         <span class="ca-gov-icon-ca-state" aria-hidden="true"></span>
