Fixing siteimprove errors

--- a/src/_includes/modules/navigation-sample-news.njk
+++ b/src/_includes/modules/navigation-sample-news.njk
@@ -1,25 +1,25 @@
 <!-- Top Level Navigation Only -->
 <nav id="navigation" class="main-navigation dropdown">
-  <ul id="nav_list" class="top-level-nav" role="list">
-    <li class="nav-item" role="presentation">
+  <ul id="nav_list" class="top-level-nav">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Link 1
       </a>
     </li>
 
-    <li class="nav-item" role="presentation">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Link 2
       </a>
     </li>
 
-    <li class="nav-item" role="presentation">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Link 3
       </a>
     </li>
 
-    <li class="nav-item" role="presentation">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Section 1
       </a>
@@ -53,7 +53,7 @@
       </div>
     </li>
 
-    <li class="nav-item" role="presentation">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Section 2
       </a>
