--- a/src/_includes/modules/navigation-sample-site.njk
+++ b/src/_includes/modules/navigation-sample-site.njk
@@ -1,12 +1,12 @@
 <!-- Top Level Navigation Only -->
 <nav id="navigation" class="main-navigation singlelevel auto-highlight">
-  <ul id="nav_list" class="top-level-nav" role="list">
-    <li class="nav-item" role="presentation">
+  <ul id="nav_list" class="top-level-nav">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Get Started
       </a>
     </li>
-    <li class="nav-item" role="presentation">
+    <li class="nav-item">
       <a
         href="/components/side-navigation-sample.html"
         rel="noindex"
@@ -14,17 +14,17 @@
         Types of parties
       </a>
     </li>
-    <li class="nav-item" role="presentation">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Event templates
       </a>
     </li>
-    <li class="nav-item" role="presentation">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Supplies
       </a>
     </li>
-    <li class="nav-item" role="presentation">
+    <li class="nav-item">
       <a href="javascript:;" class="first-level-link" aria-disabled="true">
         Vendors
       </a>
