--- a/src/_includes/modules/search-disabled.njk
+++ b/src/_includes/modules/search-disabled.njk
@@ -1,5 +1,5 @@
 <div class="container">
-  <form id="Search" class="pos-rel" disabled aria-disabled="true">
+  <form id="Search" class="pos-rel">
     <span class="sr-only" id="SearchInput">Custom Google Search</span>
     <input
       type="search"
@@ -8,8 +8,8 @@
       placeholder="Search"
       class="search-textfield"
       disabled />
-    <button type="submit" class="gsc-search-button" disabled>
-      <span class="ca-gov-icon-search" aria-disabled="true"></span>
+    <button type="submit" class="gsc-search-button">
+      <span class="ca-gov-icon-search"></span>
       <span class="sr-only">Submit</span>
     </button>
     <div class="close-search-btn">
