--- a/src/_includes/modules/section-icon-blocks.html
+++ b/src/_includes/modules/section-icon-blocks.html
@@ -1,8 +1,8 @@
 <!--Icon Image Blocks-->
-<div style="background:#EDEDEF;">
+<div class="bg-gray-50">
   <div class="container p-t-lg">
     <div class="row">
-      <div class="third m-b-lg round-card">
+      <div class="col-lg-4 m-b-lg round-card">
         <!-- Icon Blocks -->
         <a
           href="/components.html"
@@ -20,7 +20,7 @@
         </a>
         <!-- End Icon Blocks -->
       </div>
-      <div class="third m-b-lg round-card">
+      <div class="col-lg-4 m-b-lg round-card">
         <!-- Icon Blocks -->
         <a
           href="/visual-design/icons.html#Search-icons"
@@ -38,7 +38,7 @@
         </a>
         <!-- End Icon Blocks -->
       </div>
-      <div class="third m-b-lg round-card">
+      <div class="col-lg-4 m-b-lg round-card">
         <!-- Icon Blocks -->
         <a
           href="/visual-design/color.html#ColorThemes"
