Fixing executive profile a11y  complaint

--- a/src/_includes/modules/executive-profile-dark.html
+++ b/src/_includes/modules/executive-profile-dark.html
@@ -8,6 +8,7 @@
     <p>
       <a href="javascript:;" aria-label="Link to Official's Website 1">
         Bio or contact info
+        <span class="sr-only">(link to executive #3 website)</span>
       </a>
     </p>
   </div>
