--- a/src/_includes/modules/executive-profile.html
+++ b/src/_includes/modules/executive-profile.html
@@ -6,8 +6,9 @@
     <h3 class="executive-name">Name</h3>
     <p>Government agency</p>
     <p>
-      <a href="javascript:;" aria-label="Link to Official's Website 3">
+      <a href="javascript:;">
         Bio or contact info
+        <span class="sr-only">(link to executive #1 website)</span>
       </a>
     </p>
   </div>
