--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -1,4 +1,4 @@
-<div class="bg-primary-gradient p-b-md">
+<div class="bg-primary p-b-md">
   <div class="partner-with-us container">
     <div class="row">
       <div class="col-sm-6">
