Executive profile a11y twisting

--- a/src/_includes/modules/executive-profile-dark.html
+++ b/src/_includes/modules/executive-profile-dark.html
@@ -6,7 +6,7 @@
     <h3 class="executive-name">Name</h3>
     <p>Government agency</p>
     <p>
-      <a href="javascript:;" aria-label="Link to Official's Website 1">
+      <a href="javascript:;">
         Bio or contact info
         <span class="sr-only">(link to executive #3 website)</span>
       </a>
