--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -8,22 +8,24 @@
           aria-level="2">
           State Web Template
         </div>
-        <a href="/about.html" class="d-block no-underline m-y font-size-16">
+        <a
+          href="/about.html"
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           About <span class="sr-only">this website</span>
         </a>
         <a
           href="/contact-us.html"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           Contact us <span class="sr-only">regarding this website</span>
         </a>
         <a
           href="https://airtable.com/shro9V6ry2Cf4mpgG"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           Give feedback <span class="sr-only">regarding this website</span>
         </a>
         <a
           href="/accessibility.html"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           Accessibility <span class="sr-only">compliance for this website</span>
         </a>
       </div>
@@ -36,17 +38,17 @@
         </div>
         <a
           href="https://webstandards.ca.gov"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           State Web Standards
         </a>
         <a
           href="https://designsystem.webstandards.ca.gov"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           California Design System
         </a>
         <a
           href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           State Web Template GitHub
         </a>
       </div>
@@ -59,17 +61,17 @@
         </div>
         <a
           href="https://designsystem.webstandards.ca.gov/principles/"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           Principles
         </a>
         <a
           href="https://designsystem.webstandards.ca.gov/style/content/"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           Content style guide
         </a>
         <a
           href="https://dor.ca.gov/Home/WebAccessibilityToolkit"
-          class="d-block no-underline m-y font-size-16">
+          class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           Web accessibility toolkit
         </a>
       </div>
