--- a/src/_includes/modules/timeline-angled.html
+++ b/src/_includes/modules/timeline-angled.html
@@ -6,7 +6,10 @@
     <div style="margin-bottom:6rem;max-width:876px;">
       <h2>The State Template is one step closer to the Design System</h2>
       <p>
-        The final release (V6) of the State Web Template is part of a planned move to the Design System. V6 of the State Template moves us one step closer to a new statewide digital standard. This timeline describes our planned activities and release dates.
+        The final release (V6) of the State Web Template is part of a planned
+        move to the Design System. V6 of the State Template moves us one step
+        closer to a new statewide digital standard. This timeline describes our
+        planned activities and release dates.
       </p>
     </div>
   </div>
@@ -35,9 +38,7 @@
         </div>
         <div class="dot-text">
           <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2022</h3>
-          <p class="mb-4">
-            Update and modernize the State Web Template V6
-          </p>
+          <p class="mb-4">Update and modernize the State Web Template V6</p>
         </div>
         <!-- End Static Process -->
       </div>
@@ -63,9 +64,10 @@
           <span class="dot-line-inner bg-grey-light brd-gray-light"></span>
         </div>
         <div class="dot-text">
-          <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2024+</h3>
+          <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2025+</h3>
           <p class="mb-4">
-            Release Eureka, the next version of  the Design System and support a transition to it
+            Release Eureka, the next version of the Design System and support a
+            transition to it
           </p>
         </div>
         <!-- End Static Process -->
