Replace with working link to current Apple doc

--- a/src/_includes/modules/accessibility.html
+++ b/src/_includes/modules/accessibility.html
@@ -7,7 +7,7 @@
   </li>
   <li>
     Review with the
-    <a href="https://www.apple.com/voiceover/info/guide/_1121.html">
+    <a href="https://support.apple.com/guide/voiceover/welcome/mac">
       VoiceOver
     </a>
     or
