Change link to main Accessibility page on Apple website

--- a/src/_includes/modules/accessibility.html
+++ b/src/_includes/modules/accessibility.html
@@ -7,9 +7,7 @@
   </li>
   <li>
     Review with the
-    <a href="https://support.apple.com/guide/voiceover/welcome/mac">
-      VoiceOver
-    </a>
+    <a href="https://www.apple.com/accessibility/"> VoiceOver </a>
     or
     <a href="https://www.nvaccess.org/download/">NVDA</a>
     screen reader
