--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -70,7 +70,7 @@
           Content style guide
         </a>
         <a
-          href="https://dor.ca.gov/Home/WebAccessibilityToolkit"
+          href="https://www.dor.ca.gov/Home/WebAccessibilityToolkit"
           class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           Web accessibility toolkit
         </a>
