--- a/src/_includes/modules/accessibility.html
+++ b/src/_includes/modules/accessibility.html
@@ -3,7 +3,7 @@
 <ul>
   <li>
     Test with the
-    <a href="https://www.deque.com/axe/">axe accessibility tool</a>
+    <a href="https://www.deque.com/axe/">Axe accessibility tool</a>
   </li>
   <li>
     Review with the
