--- a/src/_includes/modules/accessibility.html
+++ b/src/_includes/modules/accessibility.html
@@ -7,9 +7,9 @@
   </li>
   <li>
     Review with the
-    <a href="https://www.apple.com/voiceover/info/guide/_1121.html">
-      VoiceOver
-    </a>
+    <a href="https://www.apple.com/voiceover/info/guide/_1121.html"
+      >VoiceOver</a
+    >
     or
     <a href="https://www.nvaccess.org/download/">NVDA</a>
     screen reader
