--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -37,7 +37,7 @@
       content="Version 6 of the State Web Template is California's latest web design standard." />
     <meta
       property="og:image"
-      content="https://california.azureedge.net/cdt/statetemplate/global/images/social_media_preview_image.png" />
+      content="https://cdn.cdt.ca.gov/cdt/statetemplate/global/images/social_media_preview_image.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
@@ -49,7 +49,7 @@
       content="Version 6 of the State Web Template is California's latest web design standard." />
     <meta
       property="twitter:image"
-      content="https://california.azureedge.net/cdt/statetemplate/global/images/social_media_preview_image.png" />
+      content="https://cdn.cdt.ca.gov/cdt/statetemplate/global/images/social_media_preview_image.png" />
     {% include "../head-js-css.njk" %}
   </head>
   <body class="primary">
