Content Desing Principles

--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -65,7 +65,7 @@
           Principles
         </a>
         <a
-          href="https://designsystem.webstandards.ca.gov/style/content/"
+          href="https://hub.innovation.ca.gov/content-design/principles/"
           class="d-block no-underline m-y font-size-16 text-white color-highlight-hover underline-hover">
           Content style guide
         </a>
