--- a/src/_includes/modules/news-cards.html
+++ b/src/_includes/modules/news-cards.html
@@ -12,7 +12,7 @@
         </a>
       </h3>
       <p class="font-size-16 color-black">
-        Keep up-to-date on our latest updates. Sign up for email notifcations.
+        Keep up-to-date on our latest updates. Sign up for email notifications.
       </p>
     </div>
   </div>
