Updated analytics code

--- a/src/_includes/analytics.njk
+++ b/src/_includes/analytics.njk
@@ -1,7 +1,14 @@
 <!-- BEGIN Google Tag Manager -->
 <!-- Custom Configuration for https://template.webstandards.ca.gov/ only -->
-<link rel="preconnect" href="https://www.googletagmanager.com" />
 <script>
-  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-PWPX7KD');
+    var loadGTM = function () {
+     (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-PWPX7KD');
+  };
+
+  if ("requestIdleCallback" in window) {
+    requestIdleCallback(loadGTM);
+  } else {
+    setTimeout(loadGTM, 200); // fallback for older browsers
+  }
 </script>
 <!-- END Google Tag Manager -->
