--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -1,8 +1,16 @@
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<!-- Preconnects and preloads -->
 <link
-  href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=block"
-  rel="stylesheet" />
+  rel="preload"
+  href="https://fonts.gstatic.com/s/publicsans/v18/ijwRs572Xtc6ZYQws9YVwnNGfJ7QwOk1.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin />
+<link
+  rel="preload"
+  href="/state-template/fonts/CaGov.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin />
 <link rel="stylesheet" href="/state-template/css/cagov.core.min.css" />
 <link rel="stylesheet" href="/css/custom.css" />
 {%- if customcss -%}
